k8s/calico/05-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ipv6-test-pod
spec:
  containers:
  - name: test-container
    image: alpine
    command: ["sleep", "3600"]
    stdin: true
    tty: true
    ports:
    - containerPort: 80
  dnsPolicy: Default
  hostNetwork: true
