k8s/calico/test-anbus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ipv6-test-pod
  namespace: default
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
  nodeSelector:
    kubernetes.io/hostname: anbus
