k8s/calico/08-networkpolicy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tcp-80
  namespace: default
spec:
  selector: web == 'true'
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
